[gd_scene load_steps=7 format=2]

[ext_resource path="res://theme/Main.tres" type="Theme" id=1]
[ext_resource path="res://scenes/crt_layer/CRTLayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/GravityRegular5.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/options_screen/OptionsScreen.gd" type="Script" id=4]
[ext_resource path="res://scenes/option_slider/OptionSlider.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="OptionsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 800.0
margin_bottom = 500.0
custom_constants/margin_right = 150
custom_constants/margin_top = 50
custom_constants/margin_left = 150
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer"]
margin_left = 150.0
margin_top = 50.0
margin_right = 650.0
margin_bottom = 450.0
split_offset = 250
dragger_visibility = 1

[node name="OptionsVbox" type="VBoxContainer" parent="MarginContainer/VSplitContainer"]
margin_right = 500.0
margin_bottom = 370.0
custom_constants/separation = 8

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VSplitContainer/OptionsVbox"]
margin_right = 500.0
margin_bottom = 32.0
split_offset = 55
dragger_visibility = 1

[node name="Label2" type="Label" parent="MarginContainer/VSplitContainer/OptionsVbox/HSplitContainer"]
margin_right = 287.0
margin_bottom = 32.0
text = "Sound FX"

[node name="HSlider2" type="HSlider" parent="MarginContainer/VSplitContainer/OptionsVbox/HSplitContainer"]
margin_left = 299.0
margin_top = 4.0
margin_right = 500.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 1 )
max_value = 100.0
step = 10.0
value = 70.0

[node name="MenuMusicSlider" parent="MarginContainer/VSplitContainer/OptionsVbox" instance=ExtResource( 5 )]
title = "Menu Music"
initial_value = 70

[node name="CRTOption" type="CheckButton" parent="MarginContainer/VSplitContainer/OptionsVbox"]
margin_top = 80.0
margin_right = 500.0
margin_bottom = 120.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_constants/hseparation = 50
text = "CRT EFFECT"

[node name="BackButton" type="Button" parent="MarginContainer/VSplitContainer"]
margin_top = 382.0
margin_right = 90.0
margin_bottom = 398.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "<-Back"

[node name="CRTLayer" parent="." instance=ExtResource( 2 )]
[connection signal="value_changed" from="MarginContainer/VSplitContainer/OptionsVbox/MenuMusicSlider" to="." method="_on_MenuMusicSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/OptionsVbox/CRTOption" to="." method="_on_CRTOption_pressed"]
[connection signal="pressed" from="MarginContainer/VSplitContainer/BackButton" to="." method="_on_BackButton_pressed"]
